[package]
name = "polyutils"
version = "0.1.0"
authors = ["ashduino101 <ashduino101@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

bytes = "1.5.0"
wasm-bindgen-test = "0.3.40"
js-sys = "0.3.67"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
include_dir = { version = "0.7.3", features = ["glob"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
